a2-changes on home page

--- a/public/tuiter/home.html
+++ b/public/tuiter/home.html
@@ -39,22 +39,12 @@
             facilis fugit iusto laborum magni minima mollitia nulla numquam perferendis placeat repellat sequi sint
             soluta vel voluptates. Accusantium, modi, repellat.
         </p>
-        <table>
-            <tr>
-                <td>
-                    <a href="reply.html">Reply</a> 123
-                </td>
-                <td>
-                    <a href="retuit.html">Retuit</a> 234
-                </td>
-                <td>
-                    <a href="like.html">Like</a> 345
-                </td>
-                <td>
-                    <a href="share.html">Share</a>
-                </td>
-            </tr>
-        </table>
+        <div>
+            <a href="reply.html">Reply</a> 123 ⎜
+            <a href="retuit.html">Retuit</a> 234 ⎜
+            <a href="like.html">Like</a> 345 ⎜
+            <a href="share.html">Share</a>
+        </div>
     </li>
 </ul>
 
@@ -69,22 +59,12 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores autem cumque deleniti doloribus
             incidunt necessitatibus non provident recusandae reiciendis voluptatum.
         </p>
-        <table>
-            <tr>
-                <td>
-                    <a href="reply.html">Reply</a> 123
-                </td>
-                <td>
-                    <a href="retuit.html">Retuit</a> 234
-                </td>
-                <td>
-                    <a href="like.html">Like</a> 345
-                </td>
-                <td>
-                    <a href="share.html">Share</a>
-                </td>
-            </tr>
-        </table>
+        <div>
+            <a href="reply.html">Reply</a> 123 ⎜
+            <a href="retuit.html">Retuit</a> 234 ⎜
+            <a href="like.html">Like</a> 345 ⎜
+            <a href="share.html">Share</a>
+        </div>
     </li>
 </ul>
 
