a3-explore and bookmarks screen

--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="index.css"
-          rel="stylesheet"/>
+    <title>Explore / Tuiter</title>
+    <link href="../style.css" rel="stylesheet"/>
+    <link href="index.css" rel="stylesheet"/>
 </head>
 <body>
-<div class="wd-content-container wd-margin-left">
+<div class="wd-main-container">
     <div class="wd-div-nav">
         <div class="wd-nav-search-container">
             <div class="wd-search-input">
@@ -20,37 +20,37 @@
         </div>
         <div class="wd-nav-tab-container">
             <div class="wd-nav-tab wd-nav-selected">
-                <a href="">For you</a>
+                <a href="#">For you</a>
             </div>
             <div class="wd-nav-tab">
-                <a href="">Trending</a>
+                <a href="#">Trending</a>
             </div>
             <div class="wd-nav-tab">
-                <a href="">US Elections</a>
+                <a href="#">US Elections</a>
             </div>
             <div class="wd-nav-tab">
-                <a href="">News</a>
+                <a href="#">News</a>
             </div>
             <div class="wd-nav-tab">
-                <a href="">Sports</a>
+                <a href="#">Sports</a>
             </div>
             <div class="wd-nav-tab">
-                <a href="">Entertainment</a>
+                <a href="#">Entertainment</a>
             </div>
         </div>
     </div>
     <div class="wd-div-blank"></div>
 
-    <a class="wd-post-container" href="">
-            <div class="wd-post">
-                <h3>Trending in Science</h3>
-                <h1>Starship</h1>
-                <h3>55.5K Tweets</h3>
-            </div>
-            <div class="wd-more">...</div>
+    <a class="wd-post-container" href="#">
+        <div class="wd-post">
+            <h3>Trending in Science</h3>
+            <h1>Starship</h1>
+            <h3>55.5K Tweets</h3>
+        </div>
+        <div class="wd-more">...</div>
     </a>
 
-    <a class="wd-post-container" href="">
+    <a class="wd-post-container" href="#">
         <div class="wd-post">
             <h3>Sports · Trending</h3>
             <h1>Joe Rogan</h1>
@@ -59,7 +59,7 @@
         <div class="wd-more">...</div>
     </a>
 
-    <a class="wd-post-container" href="">
+    <a class="wd-post-container" href="#">
         <div class="wd-post">
             <h3><span class="wd-author">Bloomberg &#x2714</span> · Last night</h3>
             <h1>White House requested USS John McCain be "out of sight" during Trump’s Japan visit</h1>
@@ -67,16 +67,17 @@
         <img src="https://pbs.twimg.com/media/FdyFN-6UoAEPrQM?format=jpg&name=120x120"/>
     </a>
 
-    <a class="wd-post-container" href="">
+    <a class="wd-post-container" href="#">
         <div class="wd-post">
             <h3><span class="wd-author">WSJ Science &#x2714</span> · Yesterday</h3>
-            <h1>Donor-conceived individuals are trying to encourage parents to tell their kids about their origins</h1>
+            <h1>Donor-conceived individuals are trying to encourage parents to tell their kids about their
+                origins</h1>
         </div>
         <img src="https://pbs.twimg.com/media/FdsVZQ5WICAYdtN?format=jpg&name=240x240"/>
     </a>
 
 
-    <a class="wd-post-container" href="">
+    <a class="wd-post-container" href="#">
         <div class="wd-post">
             <h3>War in Ukraine · LIVE</h3>
             <h1>Putin expected to announce annexation of Ukrainian territories</h1>
@@ -84,7 +85,7 @@
         <img src="https://pbs.twimg.com/semantic_core_img/1575659924603953153/dPGKmbrm?format=jpg&name=240x240"/>
     </a>
 
-    <a class="wd-post-container" href="">
+    <a class="wd-post-container" href="#">
         <div class="wd-post">
             <h3>US elections · LIVE</h3>
             <h1>Washington: Election news and updates</h1>
@@ -92,7 +93,7 @@
         <img src="https://pbs.twimg.com/semantic_core_img/1565328040539742208/2kG19k3W?format=jpg&name=240x240"/>
     </a>
 
-    <a class="wd-post-container" href="">
+    <a class="wd-post-container" href="#">
         <div class="wd-post">
             <h3>Trending in Washington</h3>
             <h1>Haniger</h1>
