--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 <div class="container pt-2">
-    <div class="row">
-        <div class="col-2">
+    <div class="row d-flex justify-content-center">
+        <div class="col-xl-2 col-lg-1 col-sm-2">
             <div class="list-group">
                 <a href="#"
                    class="list-group-item list-group-item-action">
@@ -21,37 +21,37 @@
                 <a href="../home.html"
                    class="list-group-item list-group-item-action">
                     <i class="fas fa-home"></i>
-                    Home
+                    <span class="d-xl-inline-block d-sm-none">Home</span>
                 </a>
                 <a href="../explore/index.html"
                    class="list-group-item list-group-item-action active">
                     <i class="fas fa-hashtag"></i>
-                    Explore
+                    <span class="d-xl-inline-block d-sm-none">Explore</span>
                 </a>
                 <a href="#"
                    class="list-group-item list-group-item-action">
                     <i class="fas fa-bell"></i>
-                    Notifications
+                    <span class="d-xl-inline-block d-sm-none">Notifications</span>
                 </a>
                 <a href="#"
                    class="list-group-item list-group-item-action">
                     <i class="fas fa-envelope"></i>
-                    Messages
+                    <span class="d-xl-inline-block d-sm-none">Messages</span>
                 </a>
                 <a href="../bookmarks/index.html"
                    class="list-group-item list-group-item-action">
                     <i class="fas fa-bookmark"></i>
-                    Bookmarks
+                    <span class="d-xl-inline-block d-sm-none">Bookmarks</span>
                 </a>
                 <a href="../bookmarks/index.html"
                    class="list-group-item list-group-item-action">
                     <i class="fas fa-list"></i>
-                    Lists
+                    <span class="d-xl-inline-block d-sm-none">Lists</span>
                 </a>
                 <a href="../bookmarks/index.html"
                    class="list-group-item list-group-item-action">
                     <i class="fas fa-user"></i>
-                    Profile
+                    <span class="d-xl-inline-block d-sm-none">Profile</span>
                 </a>
                 <a href="../bookmarks/index.html"
                    class="list-group-item list-group-item-action">
@@ -59,15 +59,15 @@
                     <!--                        <i class="fas fa-circle fa-stack-1x"></i>-->
                     <!--                        <i class="fas fa-ellipsis-h fa-stack-1x fa-inverse"></i>-->
                     <!--                    </div>-->
-                    <i class="fas fa-ellipsis-h"></i>
-                    More
+                    <i class="fas fa-ellipsis-h fa-inverse bg-dark rounded-circle"></i>
+                    <span class="d-xl-inline-block d-sm-none">More</span>
                 </a>
             </div>
-            <button class="btn btn-primary w-100 mt-2 rounded-pill">
+            <button class="btn btn-primary w-100 mt-2 mb-5 rounded-pill">
                 Tuit
             </button>
         </div>
-        <div class="col-6">
+        <div class="col-xl-6 col-lg-7 col-sm-10">
 
             <div class="row ">
                 <div class="col-11">
@@ -104,7 +104,7 @@
                         Sports
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item d-none d-md-inline-block">
                     <a class="nav-link" href="#" tabindex="-1">
                         Entertainment
                     </a>
@@ -119,7 +119,7 @@
             <ul class="list-group">
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-10">
+                        <div class="col-md-10 col-9">
                             <div class="text-secondary">
                                 Web Development
                             </div>
@@ -132,14 +132,14 @@
                                 Page Applications or SPAs
                             </div>
                         </div>
-                        <div class="col-2">
+                        <div class="col-md-2 col-3 d-flex align-items-center justify-content-end">
                             <img class="float-end wd-rounded-1" src="../images/reactjs.png" height="90px">
                         </div>
                     </div>
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-10">
+                        <div class="col-md-10 col-9">
                             <div class="fw-bolder">
                                 JavaScript <i class="fas fa-circle-check"></i>
                                 <span class="text-secondary"> - 2h</span>
@@ -151,14 +151,14 @@
                                 123K Tuits
                             </div>
                         </div>
-                        <div class="col-2">
-                            <img class="float-end wd-rounded-1" src="../images/javascript.png" height="90px">
+                        <div class="col-md-2 col-3 d-flex align-items-center justify-content-end">
+                            <img class="wd-rounded-1" src="../images/javascript.png" height="90px">
                         </div>
                     </div>
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-10">
+                        <div class="col-md-10 col-9">
                             <div class="text-secondary">
                                 Web Development
                             </div>
@@ -169,14 +169,14 @@
                                 123K Tuits
                             </div>
                         </div>
-                        <div class="col-2">
+                        <div class="col-md-2 col-3 d-flex align-items-center justify-content-end">
                             <img class="float-end wd-rounded-1" src="../images/jquery.png" height="90px">
                         </div>
                     </div>
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-10">
+                        <div class="col-md-10 col-9">
                             <div class="text-secondary">
                                 Web Development
                             </div>
@@ -188,7 +188,7 @@
                                 123K Tuits
                             </div>
                         </div>
-                        <div class="col-2">
+                        <div class="col-md-2 col-3 d-flex align-items-center justify-content-end">
                             <img class="float-end wd-rounded-1" src="../images/nodejs.png" height="90px">
                         </div>
                     </div>
@@ -196,17 +196,17 @@
             </ul>
 
         </div>
-        <div class="col-4">
+        <div class="col-xl-4 col-lg-4 d-lg-inline-block d-none">
             <ul class="list-group">
                 <li class="list-group-item fw-bolder">
                     Who to follow
                 </li>
                 <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-2">
+                    <div class="row d-flex">
+                        <div class="col-lg-2">
                             <img src="../images/java.png" class="rounded-circle" height="50px"/>
                         </div>
-                        <div class="col-7">
+                        <div class="col-lg-6 text-nowrap">
                             <div class="fw-bolder">
                                 Java <i class="fas fa-circle-check"></i>
                             </div>
@@ -214,7 +214,7 @@
                                 @Java
                             </div>
                         </div>
-                        <div class="col-3">
+                        <div class="col-xxl-3 col-lg-4 ms-auto">
                             <button class="btn btn-primary w-100 mt-2 rounded-pill">
                                 Follow
                             </button>
@@ -222,11 +222,11 @@
                     </div>
                 </li>
                 <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-2">
+                    <div class="row d-flex">
+                        <div class="col-lg-2">
                             <img src="../images/relativityspace.png" class="rounded-circle" height="50px"/>
                         </div>
-                        <div class="col-7">
+                        <div class="col-lg-6 text-nowrap">
                             <div class="fw-bolder">
                                 Relativity Space <i class="fas fa-circle-check"></i>
                             </div>
@@ -234,7 +234,7 @@
                                 @relativityspace
                             </div>
                         </div>
-                        <div class="col-3">
+                        <div class="col-xxl-3 col-lg-4 ms-auto">
                             <button class="btn btn-primary w-100 mt-2 rounded-pill">
                                 Follow
                             </button>
@@ -242,11 +242,11 @@
                     </div>
                 </li>
                 <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-2">
+                    <div class="row d-flex">
+                        <div class="col-lg-2">
                             <img src="../images/virgingalactic.png" class="rounded-circle" height="50px"/>
                         </div>
-                        <div class="col-7">
+                        <div class="col-lg-6 text-nowrap">
                             <div class="fw-bolder">
                                 Virgin Galactic <i class="fas fa-circle-check"></i>
                             </div>
@@ -254,7 +254,7 @@
                                 @virgingalactic
                             </div>
                         </div>
-                        <div class="col-3">
+                        <div class="col-xxl-3 col-lg-4 ms-auto">
                             <button class="btn btn-primary w-100 mt-2 rounded-pill">
                                 Follow
                             </button>
@@ -262,11 +262,11 @@
                     </div>
                 </li>
                 <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-2">
+                    <div class="row d-flex">
+                        <div class="col-lg-2">
                             <img src="../images/nasa.jpeg" class="rounded-circle" height="50px"/>
                         </div>
-                        <div class="col-7">
+                        <div class="col-lg-6 text-nowrap">
                             <div class="fw-bolder">
                                 NASA <i class="fas fa-circle-check"></i>
                             </div>
@@ -274,7 +274,7 @@
                                 @NASA
                             </div>
                         </div>
-                        <div class="col-3">
+                        <div class="col-xxl-3 col-lg-4 ms-auto">
                             <button class="btn btn-primary w-100 mt-2 rounded-pill">
                                 Follow
                             </button>
@@ -282,11 +282,11 @@
                     </div>
                 </li>
                 <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-2">
+                    <div class="row d-flex">
+                        <div class="col-lg-2">
                             <img src="../images/tesla.png" class="rounded-circle" height="50px"/>
                         </div>
-                        <div class="col-7">
+                        <div class="col-lg-6 text-nowrap">
                             <div class="fw-bolder">
                                 Tesla <i class="fas fa-circle-check"></i>
                             </div>
@@ -294,7 +294,7 @@
                                 @Tesla
                             </div>
                         </div>
-                        <div class="col-3">
+                        <div class="col-xxl-3 col-lg-4 ms-auto">
                             <button class="btn btn-primary w-100 mt-2 rounded-pill">
                                 Follow
                             </button>
