--- a/public/tuiter/explore-challenge/index.html
+++ b/public/tuiter/explore-challenge/index.html
@@ -10,16 +10,16 @@
     <link href="index.css" rel="stylesheet"/>
 </head>
 <body>
-<div class="container pt-2">
+<div class="container">
     <div class="row d-flex justify-content-center">
-        <div class="col-xl-2 col-lg-1 col-sm-2">
+        <div class="col-xl-2 col-lg-1 col-sm-2 pt-2 pe-4">
             <div class="list-group">
                 <a href="#"
                    class="list-group-item list-group-item-action">
                     <i class="fas fa-t"></i>
                 </a>
                 <a href="../home.html"
-                   class="list-group-item list-group-item-action">
+                   class="list-group-item list-group-item-action text-light">
                     <i class="fas fa-home"></i>
                     <span class="d-xl-inline-block d-sm-none ms-2">Home</span>
                 </a>
@@ -29,32 +29,32 @@
                     <span class="d-xl-inline-block d-sm-none ms-2">Explore</span>
                 </a>
                 <a href="#"
-                   class="list-group-item list-group-item-action">
+                   class="list-group-item list-group-item-action text-light">
                     <i class="fas fa-bell"></i>
                     <span class="d-xl-inline-block d-sm-none ms-2">Notifications</span>
                 </a>
                 <a href="#"
-                   class="list-group-item list-group-item-action">
+                   class="list-group-item list-group-item-action text-light">
                     <i class="fas fa-envelope"></i>
                     <span class="d-xl-inline-block d-sm-none ms-2">Messages</span>
                 </a>
                 <a href="../bookmarks/index.html"
-                   class="list-group-item list-group-item-action">
+                   class="list-group-item list-group-item-action text-light">
                     <i class="fas fa-bookmark"></i>
                     <span class="d-xl-inline-block d-sm-none ms-2">Bookmarks</span>
                 </a>
                 <a href="../bookmarks/index.html"
-                   class="list-group-item list-group-item-action">
+                   class="list-group-item list-group-item-action text-light">
                     <i class="fas fa-list"></i>
                     <span class="d-xl-inline-block d-sm-none ms-2">Lists</span>
                 </a>
                 <a href="../bookmarks/index.html"
-                   class="list-group-item list-group-item-action">
+                   class="list-group-item list-group-item-action text-light">
                     <i class="fas fa-user"></i>
                     <span class="d-xl-inline-block d-sm-none ms-2">Profile</span>
                 </a>
                 <a href="../bookmarks/index.html"
-                   class="list-group-item list-group-item-action">
+                   class="list-group-item list-group-item-action text-light">
                     <i class="fas fa-ellipsis-h fa-inverse"></i>
                     <span class="d-xl-inline-block d-sm-none ms-2">More</span>
                 </a>
@@ -63,7 +63,7 @@
                 Tuit
             </button>
         </div>
-        <div class="col-xl-6 col-lg-7 col-sm-10 wd-border-left-right p-0">
+        <div class="col-xl-6 col-lg-7 col-sm-10 wd-border-left-right p-0 pt-2">
 
             <div class="row wd-padding-12">
                 <div class="col-11">
@@ -192,12 +192,12 @@
             </ul>
 
         </div>
-        <div class="col-xl-4 col-lg-4 d-lg-inline-block d-none">
-            <ul class="list-group">
-                <li class="list-group-item fw-bolder">
+        <div class="col-xl-4 col-lg-4 d-lg-inline-block d-none pt-2">
+            <ul class="list-group bg-dark wd-rounded-1 ms-4">
+                <li class="list-group-item fw-bolder bg-dark">
                     Who to follow
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item bg-dark">
                     <div class="row d-flex">
                         <div class="col-lg-2">
                             <img src="../images/java.png" class="rounded-circle" height="50px"/>
@@ -217,7 +217,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item bg-dark">
                     <div class="row d-flex">
                         <div class="col-lg-2">
                             <img src="../images/relativityspace.png" class="rounded-circle" height="50px"/>
@@ -237,7 +237,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item bg-dark">
                     <div class="row d-flex">
                         <div class="col-lg-2">
                             <img src="../images/virgingalactic.png" class="rounded-circle" height="50px"/>
@@ -257,7 +257,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item bg-dark">
                     <div class="row d-flex">
                         <div class="col-lg-2">
                             <img src="../images/nasa.jpeg" class="rounded-circle" height="50px"/>
@@ -277,7 +277,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item bg-dark">
                     <div class="row d-flex">
                         <div class="col-lg-2">
                             <img src="../images/tesla.png" class="rounded-circle" height="50px"/>
