--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -113,7 +113,7 @@
 
             <div class="position-relative">
                 <img src="../images/starship.jpeg" width="100%"/>
-                <h1 class="position-absolute bottom-0 left-0 text-white">SpaceX's Starship</h1>
+                <h1 class="position-absolute bottom-0 left-0 text-white ps-3">SpaceX's Starship</h1>
             </div>
 
             <ul class="list-group">
