--- a/public/tuiter/explore-challenge/index.html
+++ b/public/tuiter/explore-challenge/index.html
@@ -15,7 +15,7 @@
         <div class="col-xl-2 col-lg-1 col-sm-2 pt-2 pe-4">
             <div class="list-group">
                 <a href="#"
-                   class="list-group-item list-group-item-action">
+                   class="list-group-item list-group-item-action text-light">
                     <i class="fas fa-t"></i>
                 </a>
                 <a href="../home.html"
