--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -31,7 +31,7 @@
                 odit officiis, perspiciatis provident quas quidem ratione, reiciendis tempora? Aut.
             </p>
             <div class="wd-repost-container">
-                <img src="https://pbs.twimg.com/card_img/1575377130241785856/zQA7WzQu?format=jpg&name=small">
+                <img src="../images/starship.jpeg">
                 <div class="wd-repost">
                     <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias autem, beatae delectus esse ipsam
