--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,8 @@
       <li><a href="labs/a2/index.html">A2-HTML</a></li>
       <li><a href="labs/a3/index.html">A3-CSS</a></li>
       <li><a href="labs/a4/index.html">A4-Bootstrap</a></li>
+      <li><a href="labs/a5/index.html">A5-JavaScript</a></li>
+      <li><a href="labs/a5/todos/index.html">A5-lab-todos</a></li>
       <li><a href="tuiter/navigation.html">Tuiter</a></li>
     </ul>
   </body>
