--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <title>Explore / Tuiter</title>
     <link href="../../vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../../vendors/bootswatch/bootstrap.min.css" rel="stylesheet"/>
     <script src="../../vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
     <link href="../../vendors/fontawesome/css/all.css" rel="stylesheet"/>
     <script src="../../vendors/fontawesome/js/all.js"></script>
     <link href="index.css" rel="stylesheet"/>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+            crossorigin="anonymous"></script>
 </head>
 <body>
+
+<div class="container" id="wd-explore"></div>
+<script src="index.js" type="module"></script>
+<!--
 <div class="container pt-2">
     <div class="row d-flex justify-content-center">
         <div class="col-xl-2 col-lg-1 col-sm-2">
@@ -55,11 +63,7 @@
                 </a>
                 <a href="../bookmarks/index.html"
                    class="list-group-item list-group-item-action">
-                    <!--                    <div class="fa-stack">-->
-                    <!--                        <i class="fas fa-circle fa-stack-1x"></i>-->
-                    <!--                        <i class="fas fa-ellipsis-h fa-stack-1x fa-inverse"></i>-->
-                    <!--                    </div>-->
-                    <i class="fas fa-ellipsis-h fa-inverse bg-dark rounded-circle"></i>
+                    <i class="fas fa-ellipsis-h text-black bg-white rounded-circle"></i>
                     <span class="d-xl-inline-block d-sm-none">More</span>
                 </a>
             </div>
@@ -306,5 +310,6 @@
     </div>
 
 </div>
+-->
 </body>
 </html>
