--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -8,7 +8,7 @@
 <ul>
     <li><a href="home.html">Home</a></li>
     <li><a href="explore/index.html">Explore</a></li>
-    <li><a href="explore-challenge/index.html">Explore-challenge</a></li>
+    <li><a href="explore-a4-challenge/index.html">Explore-a4-challenge</a></li>
     <li><a href="notifications.html">Notifications</a></li>
     <li><a href="messages.html">Messages</a></li>
     <li><a href="bookmarks.html">Bookmarks</a></li>
