--- a/public/tuiter/explore-a4-challenge/index.html
+++ b/public/tuiter/explore-a4-challenge/index.html
@@ -23,7 +23,7 @@
                     <i class="fas fa-home"></i>
                     <span class="d-xl-inline-block d-sm-none ms-2">Home</span>
                 </a>
-                <a href="../explore/index.html"
+                <a href="../ExploreScreen/index.html"
                    class="list-group-item list-group-item-action active">
                     <i class="fas fa-hashtag"></i>
                     <span class="d-xl-inline-block d-sm-none ms-2">Explore</span>
