--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <ul>
-    <li><a href="home.html">Home</a></li>
-    <li><a href="explore/index.html">Explore</a></li>
+    <li><a href="HomeScreen/index.html">Home</a></li>
+    <li><a href="ExploreScreen/index.html">Explore</a></li>
     <li><a href="explore-a4-challenge/index.html">Explore-a4-challenge</a></li>
     <li><a href="notifications.html">Notifications</a></li>
     <li><a href="messages.html">Messages</a></li>
