--- a/public/index.html
+++ b/public/index.html
@@ -27,26 +27,17 @@
     <title>React App</title>
   </head>
   <body>
-<!--    <noscript>You need to enable JavaScript to run this app.</noscript>-->
-<!--    <div id="root"></div>-->
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-    <h1>Web Dev Assignments</h1>
-    <ul>
-      <li><a href="labs/a2/index.html">A2-HTML</a></li>
-      <li><a href="labs/a3/index.html">A3-CSS</a></li>
-      <li><a href="labs/a4/index.html">A4-Bootstrap</a></li>
-      <li><a href="labs/a5/index.html">A5-JavaScript</a></li>
-      <li><a href="labs/a5/todos/index.html">A5-lab-todos</a></li>
-      <li><a href="tuiter/navigation.html">Tuiter</a></li>
-    </ul>
+<!--    <h1>Web Dev Assignments</h1>-->
+<!--    <ul>-->
+<!--      <li><a href="labs/a2/index.html">A2-HTML</a></li>-->
+<!--      <li><a href="labs/a3/index.html">A3-CSS</a></li>-->
+<!--      <li><a href="labs/a4/index.html">A4-Bootstrap</a></li>-->
+<!--      <li><a href="labs/a5/index.html">A5-JavaScript</a></li>-->
+<!--      <li><a href="labs/a5/todos/index.html">A5-lab-todos</a></li>-->
+<!--      <li><a href="tuiter/navigation.html">Tuiter</a></li>-->
+<!--    </ul>-->
   </body>
 </html>
