a6-fix home page redirect conflict

--- a/public/tuiter/explore-a4-challenge/index.html
+++ b/public/tuiter/explore-a4-challenge/index.html
@@ -18,7 +18,7 @@
                    class="list-group-item list-group-item-action text-light">
                     <i class="fas fa-t"></i>
                 </a>
-                <a href="../home.html"
+                <a href="../home-screen.html"
                    class="list-group-item list-group-item-action text-light">
                     <i class="fas fa-home"></i>
                     <span class="d-xl-inline-block d-sm-none ms-2">Home</span>
